Added onboarding to list editor open

--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -641,7 +641,7 @@ input[type="checkbox"]:checked + label:before {
   100%   { color: @color-text; }
 }
 
-.onboarding h2, .onboarding .text-heading {
+.onboarding h2, .onboarding .text-heading, .onboarding .text-heading-primary {
   -webkit-animation: onboarding-text-pulse ease-in-out 1.5s infinite;
   -moz-animation:    onboarding-text-pulse ease-in-out 1.5s infinite;
   -o-animation:      onboarding-text-pulse ease-in-out 1.5s infinite;
