Fix slide bounce animation to run only one time - not to bounce when slide is changed.

--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -679,8 +679,7 @@ a.link-menu.onboarding:not(.highlighted) span {
 
 // Bounce acitve and next slide.
 // From https://coveloping.com/tools/css-animation-generator
-.onboarding .swiper-slide-active,
-.onboarding .swiper-slide-active + .swiper-slide {
+.onboarding .swiper-slide {
   -webkit-animation:  onboarding-slide-bounce 2s ease-in-out 1s 1 both;
   -moz-animation:     onboarding-slide-bounce 2s ease-in-out 1s 1 both;
   -o-animation:       onboarding-slide-bounce 2s ease-in-out 1s 1 both;
