Aligned repeating icon horizontally with the first row of a agenda event title.

--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -193,11 +193,14 @@ Icon classes
 }
 
 .icon-sort.small {
-  line-height: @grid-vertical-half;
+  font-size: @size-font-medium;
+  height: @size-font-medium;
+  line-height: @size-font-medium;
+  display: inline-block;
 }
 
 .icon-sort.small:after{
-  color: @color-text-downplayed;
+  // display: block;
   font-size: @size-font-medium;
 }
 
