--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -49,14 +49,17 @@ TODO: Icons are not working yet with Phytoplankton
 @icon-volume-mute: "\e600";
 @icon-volume-up: "\e601";
 @icon-play: "\e615";
+@icon-offline: "\e616";
+@icon-downloading: "\e617";
+@icon-syncing: "\e618";
 
 @font-face {
   font-family: 'icomoon';
-  src:url('../fonts/icomoon.eot?-t2u9ll');
-  src:url('../fonts/icomoon.eot?#iefix-t2u9ll') format('embedded-opentype'),
-    url('../fonts/icomoon.woff?-t2u9ll') format('woff'),
-    url('../fonts/icomoon.ttf?-t2u9ll') format('truetype'),
-    url('../fonts/icomoon.svg?-t2u9ll#icomoon') format('svg');
+  src:url('../fonts/icomoon.eot?-7ri332');
+  src:url('../fonts/icomoon.eot?#iefix-7ri332') format('embedded-opentype'),
+    url('../fonts/icomoon.woff?-7ri332') format('woff'),
+    url('../fonts/icomoon.ttf?-7ri332') format('truetype'),
+    url('../fonts/icomoon.svg?-7ri332#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
