--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -1371,18 +1371,18 @@ textarea#ignoreSnap.disable-full-height.input-separate {
 }
 
 // 1. Remove element from flow when it has no additional status.
-.group-mixed.with-checkbox.no-additional-status > .group-mixed--right {
+.group-mixed.no-additional-status > .group-mixed--right {
   display: none;  // [1]
 }
 
 // 1. Show.
-.group-mixed.with-checkbox.repeating > .group-mixed--right > .icon-repeating,
-.group-mixed.with-checkbox.syncing:not(.offline) > .group-mixed--right > .syncing,
-.group-mixed.with-checkbox.syncing.offline > .group-mixed--right > .syncing {
+.group-mixed.repeating > .group-mixed--right > .icon-repeating,
+.group-mixed.syncing:not(.offline) > .group-mixed--right > .syncing,
+.group-mixed.syncing.offline > .group-mixed--right > .syncing {
   display: initial; // [1]
 }
 
-.group-mixed.with-checkbox.favorited > .group-mixed--right > .favorited {
+.group-mixed.favorited > .group-mixed--right > .favorited {
   display: block;
   .icon-star {
     display: block;
@@ -1390,12 +1390,12 @@ textarea#ignoreSnap.disable-full-height.input-separate {
 }
 
 // 1. Set syncing icon.
-.group-mixed.with-checkbox.syncing:not(.offline) > .group-mixed--right > .syncing {
+.group-mixed.syncing:not(.offline) > .group-mixed--right > .syncing {
   .icon-syncing();  // [1]
 }
 
 // 1. Set syncing offline icon.
-.group-mixed.with-checkbox.syncing.offline {
+.group-mixed.syncing.offline {
   &> .group-mixed--right {
     &> .syncing {
       .icon-offline();  // [1]
@@ -1405,7 +1405,7 @@ textarea#ignoreSnap.disable-full-height.input-separate {
 
 // 1. Align to top when repeating and syncing visible.
 // 2. Set display to fix the height of a syncing element.
-.group-mixed.with-checkbox.repeating.syncing > .group-mixed--right {
+.group-mixed.repeating.syncing > .group-mixed--right {
   vertical-align: top;  // [1]
   .syncing {
     display: block; // [2]
@@ -1413,7 +1413,7 @@ textarea#ignoreSnap.disable-full-height.input-separate {
 }
 
 // 1. Clear dimensions set for favorite link, when syncing is visible.
-.group-mixed.with-checkbox.favorited.syncing > .group-mixed--right > .favorited {
+.group-mixed.favorited.syncing > .group-mixed--right > .favorited {
   height: auto;           // [1]
   line-height: initial;   // [1]
   text-align: center;     // [1]
@@ -1424,7 +1424,8 @@ textarea#ignoreSnap.disable-full-height.input-separate {
   }
 }
 
-// 2. Align vertically with textarea in .group-mixed---middle.
-.group-mixed.with-checkbox.syncing > .group-mixed--right.justified {
+// 1. Align vertically with the first of of a textarea in .group-mixed---middle.
+.group-mixed.syncing > .group-mixed--right.justified {
+  vertical-align: top;  // [1]
   padding-top: @group-mixed--left-vertical-padding + 1px; // [1]
 }
