--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -55,14 +55,16 @@ TODO: Icons are not working yet with Phytoplankton
 @icon-offline: "\e616";
 @icon-downloading: "\e617";
 @icon-syncing: "\e618";
+@icon-facebook: "\e619";
+@icon-twitter: "\e61a";
 
 @font-face {
   font-family: 'icomoon';
-  src:url('../fonts/icomoon.eot?-7ri332');
-  src:url('../fonts/icomoon.eot?#iefix-7ri332') format('embedded-opentype'),
-    url('../fonts/icomoon.woff?-7ri332') format('woff'),
-    url('../fonts/icomoon.ttf?-7ri332') format('truetype'),
-    url('../fonts/icomoon.svg?-7ri332#icomoon') format('svg');
+  src:url('../fonts/icomoon.eot?-9ta6ta');
+  src:url('../fonts/icomoon.eot?#iefix-9ta6ta') format('embedded-opentype'),
+    url('../fonts/icomoon.woff?-9ta6ta') format('woff'),
+    url('../fonts/icomoon.ttf?-9ta6ta') format('truetype'),
+    url('../fonts/icomoon.svg?-9ta6ta#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
