Nicer cloud links, added email svg and removed contact from menu

--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -57,14 +57,15 @@ TODO: Icons are not working yet with Phytoplankton
 @icon-syncing: "\e618";
 @icon-facebook: "\e619";
 @icon-twitter: "\e61a";
+@icon-email: "\e61b";
 
 @font-face {
   font-family: 'icomoon';
-  src:url('../fonts/icomoon.eot?-9ta6ta');
-  src:url('../fonts/icomoon.eot?#iefix-9ta6ta') format('embedded-opentype'),
-    url('../fonts/icomoon.woff?-9ta6ta') format('woff'),
-    url('../fonts/icomoon.ttf?-9ta6ta') format('truetype'),
-    url('../fonts/icomoon.svg?-9ta6ta#icomoon') format('svg');
+  src:url('../fonts/icomoon.eot?xbggpv');
+  src:url('../fonts/icomoon.eot?#iefixxbggpv') format('embedded-opentype'),
+    url('../fonts/icomoon.woff?xbggpv') format('woff'),
+    url('../fonts/icomoon.ttf?xbggpv') format('truetype'),
+    url('../fonts/icomoon.svg?xbggpv#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
