--- a/frontend/core/src/main/webapp/landing/css/main.css
+++ b/frontend/core/src/main/webapp/landing/css/main.css
@@ -59,11 +59,11 @@ button:hover, button:focus, .button:hover, .button:focus {
 
 @font-face {
   font-family: 'icomoon';
-  src:url('../fonts/icomoon.eot?-9ta6ta');
-  src:url('../fonts/icomoon.eot?#iefix-9ta6ta') format('embedded-opentype'),
-    url('../fonts/icomoon.woff?-9ta6ta') format('woff'),
-    url('../fonts/icomoon.ttf?-9ta6ta') format('truetype'),
-    url('../fonts/icomoon.svg?-9ta6ta#icomoon') format('svg');
+  src:url('../fonts/icomoon.eot?xbggpv');
+  src:url('../fonts/icomoon.eot?#iefixxbggpv') format('embedded-opentype'),
+    url('../fonts/icomoon.woff?xbggpv') format('woff'),
+    url('../fonts/icomoon.ttf?xbggpv') format('truetype'),
+    url('../fonts/icomoon.svg?xbggpv#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -81,7 +81,6 @@ button:hover, button:focus, .button:hover, .button:focus {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 
 .icon-menu:before {
   content: "\e605";
@@ -117,6 +116,10 @@ button:hover, button:focus, .button:hover, .button:focus {
 
 .icon-twitter:before {
   content: "\e61a";
+}
+
+.icon-email:before {
+  content: "\e61b";
 }
 
 /******************/
@@ -422,7 +425,7 @@ footer a.some {
   text-align: center;
 }
 
-footer .icon-twitter:before, footer .icon-facebook:before{
+footer .some span:before{
   height: 44px;
   line-height: 44px;
   font-size: 35px;
@@ -435,8 +438,8 @@ footer .icon-twitter:before, footer .icon-facebook:before{
   }
 }
 
-/* SHOW LEFT AND RIGHT BUTTONS WHEN THERE IS ENOUGH ROOM */
-@media only screen and (min-width: 60em){
+/* LARGE */
+@media only screen and (min-width: 64.063em){
   footer div.left, footer div.right {
     display: inherit;
   }
