--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -61,11 +61,11 @@ TODO: Icons are not working yet with Phytoplankton
 
 @font-face {
   font-family: 'icomoon';
-  src:url('../fonts/icomoon.eot?xbggpv');
-  src:url('../fonts/icomoon.eot?#iefixxbggpv') format('embedded-opentype'),
-    url('../fonts/icomoon.woff?xbggpv') format('woff'),
-    url('../fonts/icomoon.ttf?xbggpv') format('truetype'),
-    url('../fonts/icomoon.svg?xbggpv#icomoon') format('svg');
+  src:url('../fonts/icomoon.eot?m5bl0u');
+  src:url('../fonts/icomoon.eot?#iefixm5bl0u') format('embedded-opentype'),
+    url('../fonts/icomoon.woff?m5bl0u') format('woff'),
+    url('../fonts/icomoon.ttf?m5bl0u') format('truetype'),
+    url('../fonts/icomoon.svg?m5bl0u#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
