--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -1411,22 +1411,34 @@ textarea#ignoreSnap.disable-full-height.input-separate {
 // 1. Align to top when repeating and syncing visible.
 // 2. Align with the top of a checkbox inside .group-mixed--left
 // 3. Align with the bottom of a checkbox inside .group-mixed--left
-.group-mixed.with-checkbox.repeating.syncing {
-  & > .group-mixed--right {
-    vertical-align: top;  // [1]
-  }
-  & > .group-mixed--left ~ .group-mixed--right {
-    & > .icon-repeating {
-      vertical-align: initial;  // [2]
+// 4. Align vertically with checkbox inside .group-mixed--left.
+.group-mixed.with-checkbox {
+  &.repeating.syncing {
+    & > .group-mixed--right {
+      vertical-align: top;  // [1]
     }
-    & > .syncing {
-      vertical-align: @group-mixed--left-vertical-padding;  // [3]
+    & > .group-mixed--left ~ .group-mixed--right {
+      & > .icon-repeating {
+        vertical-align: initial;  // [2]
+      }
+      & > .syncing {
+        vertical-align: @group-mixed--left-vertical-padding;  // [3]
+      }
+    }
+  }
+  &.syncing,
+  &.repeating {
+    & > .group-mixed--left ~ .group-mixed--right {
+      & > .syncing,
+      & > .icon-repeating {
+        vertical-align: 1px;  // [4]
+      }
     }
   }
 }
 
 // 1. Clear padding-top set to vertically align single syncing.
-// 1. Clear dimensions set for favorite link, when syncing is visible.
+// 2. Clear dimensions set for favorite link, when syncing is visible.
 .group-mixed.favorited.syncing > .group-mixed--middle:first-child + .group-mixed--right {
   padding-top: 0; // [1]
   & > .favorited {
@@ -1437,17 +1449,6 @@ textarea#ignoreSnap.disable-full-height.input-separate {
       line-height: initial; // [2]
       padding-top: 0;       // [2]
       padding-bottom: 0;    // [2]
-    }
-  }
-}
-
-// 1. Align vertically with checkbox inside .group-mixed--left.
-.group-mixed.with-checkbox.syncing,
-.group-mixed.with-checkbox.repeating {
-  & > .group-mixed--left ~ .group-mixed--right {
-    & > .syncing,
-    & > .icon-repeating {
-      vertical-align: 1px;
     }
   }
 }
