Decreased the size of a icon for recurring agenda event to same size than icon for repeating task, and changed color to text color

--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -202,12 +202,13 @@ Icon classes
 }
 
 .icon-sort.small {
-  font-size: @size-font-medium;
-  height: @size-font-medium;
-  line-height: @size-font-medium;
+  font-size: @size-icon-sort-small;
+  height: @size-icon-sort-small;
+  line-height: @size-icon-sort-small;
   display: inline-block;
   &:after {
-    font-size: @size-font-medium;
+    font-size: @size-icon-sort-small;
+    color: @color-text;
   }
 }
 
