Changed no X to be a link, better aligned more text after long task lists

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -32,6 +32,11 @@ Extended Mind specific UI-components, e.g. welcome/landing page, timeline, sidem
     width: 100%;
     text-align: center;
     display: none;  // [1]
+    a {
+      height: @grid-vertical;
+      padding-top: 9px;
+      padding-bottom: 9px;
+    }
   }
 }
 
